# udp-log-receiver

./: Cargo.toml  LICENSE  README.md
src/: main.rs
