[package]
name = "udp-log-receiver"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/romch007/udp-log-receiver"
authors = ["Romain Chardiny <romain.chardiny@gmail.com>"]
description = "Receive logs from UDP and save them to a file"
license = "MIT"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
